--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,3 +13,14 @@
     animation: fadeIn 0.5s forwards;
     -webkit-animation: fadeIn 0.5s forwards;
 }
+
+@keyframes fadeOut {
+    0% { opacity: 1; }
+    100% { opacity: 0; }
+}
+
+.slime.fadeOut
+{
+    animation: fadeOut 0.5s forwards;
+    -webkit-animation: fadeOut 0.5s forwards;
+}
