--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div style="">
   <img width="800" style="position: relative; " src="../assets/background.png"/>
-  <div style="width: fit-content; position: absolute; top: 250px; left: 350px;">
+  <div [class.wobble-hor-bottom]="css_hit" style="width: fit-content; position: absolute; top: 250px; left: 350px;">
     <img id="slimeyId" [@death]="ng_death" [@attack]="ng_attack" [@preAttack]="ng_preAttack" class="slime" width="150" src="../assets/slimeyWithBorder.png"/>
   </div>
 </div>
